POS tagging examples

--- a/ner.ipynb
+++ b/ner.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Named entity recognition"
+    "# Named entity recognition\n",
+    "** This is broken at the moment, do not use!**"
    ]
   },
   {
@@ -21,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -30,7 +31,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'text': ['EU', 'rejects', 'German', 'call', 'to', 'boycott', 'British', 'lamb', '.'], 'tags': ['I-ORG', 'O', 'O', 'O', 'O', 'O', 'O', 'O', 'O']}\n",
+      "{'tags': ['I-ORG', 'O', 'O', 'O', 'O', 'O', 'O', 'O', 'O'], 'text': ['EU', 'rejects', 'German', 'call', 'to', 'boycott', 'British', 'lamb', '.']}\n",
       "[['EU', 'rejects', 'German', 'call', 'to', 'boycott', 'British', 'lamb', '.'], ['Peter', 'Blackburn']]\n",
       "[['I-ORG', 'O', 'O', 'O', 'O', 'O', 'O', 'O', 'O'], ['I-PER', 'I-PER']]\n",
       "Words from embedding model: 50000\n",
@@ -63,8 +64,8 @@
     "# We use a separate validation set, since generally using sentences from the same documents as train/validation results in overly optimistic scores\n",
     "with open(\"data/ner_test.json\") as f:\n",
     "    validation_data=json.load(f)\n",
-    "validation_texts=[one_example[\"text\"] for one_example in data]\n",
-    "validation_labels=[one_example[\"tags\"] for one_example in data]\n",
+    "validation_texts=[one_example[\"text\"] for one_example in validation_data]\n",
+    "validation_labels=[one_example[\"tags\"] for one_example in validation_data]\n",
     "\n",
     "# Use gensim to read the embedding model\n",
     "\n",
@@ -124,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,153 +169,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Old shape: (14041,)\n",
-      "New shape: (14041, 113)\n",
-      "First example: [ 1587 11424   718   537     7 10975   379 14078     4     0     0     0\n",
-      "     0     0     0     0     0     0     0     0     0     0     0     0\n",
-      "     0     0     0     0     0     0     0     0     0     0     0     0\n",
-      "     0     0     0     0     0     0     0     0     0     0     0     0\n",
-      "     0     0     0     0     0     0     0     0     0     0     0     0\n",
-      "     0     0     0     0     0     0     0     0     0     0     0     0\n",
-      "     0     0     0     0     0     0     0     0     0     0     0     0\n",
-      "     0     0     0     0     0     0     0     0     0     0     0     0\n",
-      "     0     0     0     0     0     0     0     0     0     0     0     0\n",
-      "     0     0     0     0     0]\n",
-      "Padded labels shape: (14041, 113, 1)\n",
-      "{'I-ORG': 0, 'I-LOC': 1, 'O': 2, 'I-PER': 3}\n",
-      "First example labels: [[0]\n",
-      " [2]\n",
-      " [2]\n",
-      " [2]\n",
-      " [2]\n",
-      " [2]\n",
-      " [2]\n",
-      " [2]\n",
-      " [2]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]]\n",
-      "First weight vector: [1 1 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-      " 0 0]\n"
+     "ename": "InternalError",
+     "evalue": "Failed to create session.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mInternalError\u001b[0m                             Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-8-be54c0751026>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mconfig\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mConfigProto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mconfig\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgpu_options\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mper_process_gpu_memory_fraction\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0.3\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mset_session\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSession\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconfig\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mconfig\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;31m### ---end of weird stuff\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.5/site-packages/tensorflow/python/client/session.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, target, graph, config)\u001b[0m\n\u001b[1;32m   1507\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1508\u001b[0m     \"\"\"\n\u001b[0;32m-> 1509\u001b[0;31m     \u001b[0msuper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mSession\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtarget\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgraph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconfig\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mconfig\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1510\u001b[0m     \u001b[0;31m# NOTE(mrry): Create these on first `__enter__` to avoid a reference cycle.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1511\u001b[0m     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_default_graph_context_manager\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.5/site-packages/tensorflow/python/client/session.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, target, graph, config)\u001b[0m\n\u001b[1;32m    626\u001b[0m           \u001b[0;31m# pylint: enable=protected-access\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    627\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 628\u001b[0;31m           \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_session\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf_session\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTF_NewDeprecatedSession\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mopts\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstatus\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    629\u001b[0m     \u001b[0;32mfinally\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    630\u001b[0m       \u001b[0mtf_session\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTF_DeleteSessionOptions\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mopts\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.5/site-packages/tensorflow/python/framework/errors_impl.py\u001b[0m in \u001b[0;36m__exit__\u001b[0;34m(self, type_arg, value_arg, traceback_arg)\u001b[0m\n\u001b[1;32m    471\u001b[0m             \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    472\u001b[0m             \u001b[0mcompat\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mas_text\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mc_api\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTF_Message\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstatus\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstatus\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 473\u001b[0;31m             c_api.TF_GetCode(self.status.status))\n\u001b[0m\u001b[1;32m    474\u001b[0m     \u001b[0;31m# Delete the underlying status object from memory otherwise it stays alive\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    475\u001b[0m     \u001b[0;31m# as there is a reference to status from this from the traceback due to\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mInternalError\u001b[0m: Failed to create session."
      ]
     }
    ],
@@ -329,11 +200,11 @@
     "\n",
     "from keras.preprocessing.sequence import pad_sequences\n",
     "print(\"Old shape:\", vectorized_data.shape)\n",
-    "vectorized_data_padded=pad_sequences(vectorized_data, padding='post')\n",
+    "vectorized_data_padded=pad_sequences(vectorized_data, padding='post', maxlen=max(lengths))\n",
     "print(\"New shape:\", vectorized_data_padded.shape)\n",
     "print(\"First example:\", vectorized_data_padded[0])\n",
     "# Even with the sparse output format, the shape has to be similar to the one-hot encoding\n",
-    "vectorized_labels_padded=numpy.expand_dims(pad_sequences(vectorized_labels, padding='post'), -1)\n",
+    "vectorized_labels_padded=numpy.expand_dims(pad_sequences(vectorized_labels, padding='post', maxlen=max(lengths)), -1)\n",
     "print(\"Padded labels shape:\", vectorized_labels_padded.shape)\n",
     "print(label_map)\n",
     "print(\"First example labels:\", vectorized_labels_padded[0])\n",
@@ -343,10 +214,10 @@
     "print(\"First weight vector:\", weights[0])\n",
     "\n",
     "# Same stuff for the validation data\n",
-    "validation_vectorized_data_padded=pad_sequences(validation_vectorized_data, padding='post')\n",
-    "validation_vectorized_labels_padded=numpy.expand_dims(pad_sequences(validation_vectorized_labels, padding='post'), -1)\n",
+    "validation_vectorized_data_padded=pad_sequences(validation_vectorized_data, padding='post', maxlen=max(lengths))\n",
+    "validation_vectorized_labels_padded=numpy.expand_dims(pad_sequences(validation_vectorized_labels, padding='post', maxlen=max(lengths)), -1)\n",
     "validation_weights = numpy.copy(validation_vectorized_data_padded)\n",
-    "validation_weights[weights > 0] = 1"
+    "validation_weights[validation_weights > 0] = 1"
    ]
   },
   {
@@ -738,13 +609,7 @@
       "13700/14041 [============================>.] - ETA: 0s - loss: 1.4204\n",
       "Precision/Recall/F-score: 0.5907208450873297 / 0.49146110056925996 / 0.5365388284678496\n",
       "14041/14041 [==============================] - 3s 233us/step - loss: 1.4217\n",
-      "Epoch 64/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 64/100\n",
       "13600/14041 [============================>.] - ETA: 0s - loss: 1.4251\n",
       "Precision/Recall/F-score: 0.5898388353004613 / 0.49161090582243083 / 0.5362638559795191\n",
       "14041/14041 [==============================] - 3s 227us/step - loss: 1.4186\n",
@@ -1209,13 +1074,7 @@
       "13400/14041 [===========================>..] - ETA: 0s - loss: 0.0459\n",
       "Precision/Recall/F-score: 0.8735855470836773 / 0.8982322980125836 / 0.8857374990767413\n",
       "14041/14041 [==============================] - 4s 311us/step - loss: 0.0458\n",
-      "Epoch 64/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 64/100\n",
       "13500/14041 [===========================>..] - ETA: 0s - loss: 0.0457\n",
       "Precision/Recall/F-score: 0.844181826641232 / 0.9060221711774693 / 0.8740094896312531\n",
       "14041/14041 [==============================] - 5s 380us/step - loss: 0.0455\n",
@@ -1680,13 +1539,7 @@
       "14000/14041 [============================>.] - ETA: 0s - loss: 0.3802\n",
       "Precision/Recall/F-score: 0.9441904549509367 / 0.8456506541496055 / 0.8922079974711554\n",
       "14041/14041 [==============================] - 145s 10ms/step - loss: 0.3804\n",
-      "Epoch 64/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 64/100\n",
       "14000/14041 [============================>.] - ETA: 0s - loss: 0.3825\n",
       "Precision/Recall/F-score: 0.9505771601479324 / 0.847098771596924 / 0.8958597380650614\n",
       "14041/14041 [==============================] - 129s 9ms/step - loss: 0.3827\n",
