--- a/read_pos.ipynb
+++ b/read_pos.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Read NER data\n",
+    "# Read POS data\n",
     "Reads the data format used in https://github.com/UniversalDependencies/UD_English-EWT (CoNLLU) and converts it to json.\n",
     "\n",
     "You have to clone the above repository to get the used data."
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -51,20 +51,6 @@
     "to_json('UD_English-EWT/en-ud-train.conllu', 'data/pos_train.json')\n",
     "to_json('UD_English-EWT/en-ud-dev.conllu', 'data/pos_devel.json')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
