LSTM after 10 epochs

--- a/pos.ipynb
+++ b/pos.ipynb
@@ -12,6 +12,9 @@
    "metadata": {},
    "source": [
     "## Reading data, vocabulary and pretrained embeddings\n",
+    "\n",
+    "Use the [pos reader](read_pos.ipynb) to convert the data to json format.\n",
+    "\n",
     "These parts are similar to the previous examples. Things to note though:\n",
     "* Our data has already been tokenized and divided into sentences\n",
     "* We _cannot_ skip tokens\n",
@@ -21,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {
     "scrolled": false
    },
@@ -124,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,11 +172,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -195,36 +205,36 @@
       "     0     0     0     0     0     0     0     0     0     0     0     0\n",
       "     0     0     0]\n",
       "Padded labels shape: (12543, 159, 1)\n",
-      "{'ADP': 0, 'ADJ': 1, 'PART': 2, 'CCONJ': 3, 'PUNCT': 16, 'ADV': 4, 'AUX': 10, 'PROPN': 5, 'X': 8, 'SCONJ': 7, 'INTJ': 12, 'VERB': 9, 'DET': 11, 'PRON': 13, 'NUM': 14, 'SYM': 15, 'NOUN': 6}\n",
-      "First example labels: [[ 5]\n",
-      " [16]\n",
+      "{'ADP': 0, 'INTJ': 1, 'DET': 2, 'PART': 3, 'NUM': 13, 'ADJ': 5, 'PROPN': 8, 'SCONJ': 9, 'PUNCT': 7, 'NOUN': 10, 'VERB': 11, 'PRON': 12, 'SYM': 15, 'ADV': 4, 'X': 14, 'AUX': 16, 'CCONJ': 6}\n",
+      "First example labels: [[ 8]\n",
+      " [ 7]\n",
+      " [ 8]\n",
+      " [ 7]\n",
       " [ 5]\n",
-      " [16]\n",
-      " [ 1]\n",
-      " [ 6]\n",
-      " [ 9]\n",
-      " [ 5]\n",
-      " [ 5]\n",
-      " [ 5]\n",
-      " [16]\n",
-      " [ 5]\n",
-      " [16]\n",
+      " [10]\n",
       " [11]\n",
-      " [ 6]\n",
+      " [ 8]\n",
+      " [ 8]\n",
+      " [ 8]\n",
+      " [ 7]\n",
+      " [ 8]\n",
+      " [ 7]\n",
+      " [ 2]\n",
+      " [10]\n",
       " [ 0]\n",
-      " [11]\n",
-      " [ 6]\n",
+      " [ 2]\n",
+      " [10]\n",
       " [ 0]\n",
-      " [11]\n",
-      " [ 6]\n",
+      " [ 2]\n",
+      " [10]\n",
       " [ 0]\n",
+      " [ 8]\n",
+      " [ 7]\n",
+      " [ 0]\n",
+      " [ 2]\n",
       " [ 5]\n",
-      " [16]\n",
-      " [ 0]\n",
-      " [11]\n",
-      " [ 1]\n",
-      " [ 6]\n",
-      " [16]\n",
+      " [10]\n",
+      " [ 7]\n",
       " [ 0]\n",
       " [ 0]\n",
       " [ 0]\n",
@@ -405,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
@@ -466,16 +476,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "WARNING:tensorflow:From /usr/local/lib/python3.5/dist-packages/keras/backend/tensorflow_backend.py:1349: calling reduce_mean (from tensorflow.python.ops.math_ops) with keep_dims is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "keep_dims is deprecated, use keepdims instead\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "input_15 (InputLayer)        (None, 159)               0         \n",
+      "input_1 (InputLayer)         (None, 159)               0         \n",
       "_________________________________________________________________\n",
-      "embedding_15 (Embedding)     (None, 159, 300)          15000600  \n",
+      "embedding_1 (Embedding)      (None, 159, 300)          15000600  \n",
       "_________________________________________________________________\n",
-      "time_distributed_20 (TimeDis (None, 159, 100)          30100     \n",
+      "time_distributed_1 (TimeDist (None, 159, 100)          30100     \n",
       "_________________________________________________________________\n",
-      "time_distributed_21 (TimeDis (None, 159, 17)           1717      \n",
+      "time_distributed_2 (TimeDist (None, 159, 17)           1717      \n",
       "=================================================================\n",
       "Total params: 15,032,417\n",
       "Trainable params: 31,817\n",
@@ -483,35 +496,35 @@
       "_________________________________________________________________\n",
       "None\n",
       "Epoch 1/10\n",
-      "Accuracy: 0.2122465208747515\n",
-      " - 4s - loss: 27.0078\n",
+      "Accuracy: 0.2624254473161034\n",
+      " - 2s - loss: 27.0499\n",
       "Epoch 2/10\n",
-      "Accuracy: 0.3040159045725646\n",
-      " - 1s - loss: 25.7199\n",
+      "Accuracy: 0.3205168986083499\n",
+      " - 1s - loss: 25.7245\n",
       "Epoch 3/10\n",
-      "Accuracy: 0.4095427435387674\n",
-      " - 1s - loss: 24.0563\n",
+      "Accuracy: 0.4422266401590457\n",
+      " - 1s - loss: 24.0143\n",
       "Epoch 4/10\n",
-      "Accuracy: 0.5029423459244533\n",
-      " - 1s - loss: 21.5372\n",
+      "Accuracy: 0.5137574552683897\n",
+      " - 1s - loss: 21.4225\n",
       "Epoch 5/10\n",
-      "Accuracy: 0.5427037773359841\n",
-      " - 1s - loss: 18.7409\n",
+      "Accuracy: 0.5470775347912525\n",
+      " - 1s - loss: 18.7635\n",
       "Epoch 6/10\n",
-      "Accuracy: 0.6052087475149105\n",
-      " - 1s - loss: 16.2346\n",
+      "Accuracy: 0.5760238568588469\n",
+      " - 1s - loss: 16.5152\n",
       "Epoch 7/10\n",
-      "Accuracy: 0.6756262425447316\n",
-      " - 1s - loss: 14.1723\n",
+      "Accuracy: 0.5933598409542744\n",
+      " - 1s - loss: 14.7772\n",
       "Epoch 8/10\n",
-      "Accuracy: 0.7200397614314116\n",
-      " - 1s - loss: 12.5862\n",
+      "Accuracy: 0.6191252485089463\n",
+      " - 1s - loss: 13.3808\n",
       "Epoch 9/10\n",
-      "Accuracy: 0.7466799204771372\n",
-      " - 1s - loss: 11.3975\n",
+      "Accuracy: 0.691610337972167\n",
+      " - 1s - loss: 12.1142\n",
       "Epoch 10/10\n",
-      "Accuracy: 0.7626640159045726\n",
-      " - 1s - loss: 10.4233\n"
+      "Accuracy: 0.7186083499005964\n",
+      " - 1s - loss: 11.0328\n"
      ]
     }
    ],
@@ -540,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "metadata": {
     "scrolled": false
    },
@@ -552,13 +565,13 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "input_17 (InputLayer)        (None, 159)               0         \n",
+      "input_2 (InputLayer)         (None, 159)               0         \n",
       "_________________________________________________________________\n",
-      "embedding_17 (Embedding)     (None, 159, 300)          15000600  \n",
+      "embedding_2 (Embedding)      (None, 159, 300)          15000600  \n",
       "_________________________________________________________________\n",
-      "conv1d_5 (Conv1D)            (None, 159, 100)          90100     \n",
+      "conv1d_1 (Conv1D)            (None, 159, 100)          90100     \n",
       "_________________________________________________________________\n",
-      "time_distributed_23 (TimeDis (None, 159, 17)           1717      \n",
+      "time_distributed_3 (TimeDist (None, 159, 17)           1717      \n",
       "=================================================================\n",
       "Total params: 15,092,417\n",
       "Trainable params: 91,817\n",
@@ -566,35 +579,35 @@
       "_________________________________________________________________\n",
       "None\n",
       "Epoch 1/10\n",
-      "Accuracy: 0.8154274353876739\n",
-      " - 5s - loss: 1.5507\n",
+      "Accuracy: 0.8067196819085487\n",
+      " - 3s - loss: 1.5569\n",
       "Epoch 2/10\n",
-      "Accuracy: 0.8739562624254473\n",
-      " - 1s - loss: 0.5257\n",
+      "Accuracy: 0.875427435387674\n",
+      " - 1s - loss: 0.5405\n",
       "Epoch 3/10\n",
-      "Accuracy: 0.8966202783300199\n",
-      " - 1s - loss: 0.3509\n",
+      "Accuracy: 0.894831013916501\n",
+      " - 1s - loss: 0.3591\n",
       "Epoch 4/10\n",
-      "Accuracy: 0.9049304174950298\n",
-      " - 1s - loss: 0.2899\n",
+      "Accuracy: 0.905248508946322\n",
+      " - 1s - loss: 0.2945\n",
       "Epoch 5/10\n",
-      "Accuracy: 0.9091848906560637\n",
-      " - 1s - loss: 0.2587\n",
+      "Accuracy: 0.9093041749502982\n",
+      " - 1s - loss: 0.2624\n",
       "Epoch 6/10\n",
-      "Accuracy: 0.911530815109344\n",
-      " - 1s - loss: 0.2399\n",
+      "Accuracy: 0.9130019880715706\n",
+      " - 1s - loss: 0.2429\n",
       "Epoch 7/10\n",
-      "Accuracy: 0.9140755467196819\n",
-      " - 1s - loss: 0.2277\n",
+      "Accuracy: 0.9147514910536779\n",
+      " - 1s - loss: 0.2297\n",
       "Epoch 8/10\n",
-      "Accuracy: 0.9165805168986083\n",
-      " - 1s - loss: 0.2183\n",
-      "Epoch 9/10\n",
       "Accuracy: 0.9170178926441351\n",
-      " - 1s - loss: 0.2107\n",
+      " - 2s - loss: 0.2197\n",
+      "Epoch 9/10\n",
+      "Accuracy: 0.9164214711729622\n",
+      " - 1s - loss: 0.2120\n",
       "Epoch 10/10\n",
-      "Accuracy: 0.9179324055666004\n",
-      " - 1s - loss: 0.2050\n"
+      "Accuracy: 0.9182107355864811\n",
+      " - 1s - loss: 0.2057\n"
      ]
     }
    ],
@@ -618,15 +631,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ## Bidirectional LSTM\n",
-    "**The training data size has been reduced, since Kai was too impatient to wait for the training to finish.**\n",
+    "## Bidirectional LSTM\n",
     "\n",
-    "If you want to see the training progress, use verbose=1 instead of verbose=2."
+    "If you want to see the training progress, use verbose=1 instead of verbose=2.\n",
+    "\n",
+    "Warning: training this on on class room computers on the full data set will take for a while..."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 10,
    "metadata": {
     "scrolled": false
    },
@@ -638,13 +652,13 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "input_22 (InputLayer)        (None, 159)               0         \n",
+      "input_5 (InputLayer)         (None, 159)               0         \n",
       "_________________________________________________________________\n",
-      "embedding_22 (Embedding)     (None, 159, 300)          15000600  \n",
+      "embedding_5 (Embedding)      (None, 159, 300)          15000600  \n",
       "_________________________________________________________________\n",
-      "bidirectional_4 (Bidirection (None, 159, 200)          320800    \n",
+      "bidirectional_3 (Bidirection (None, 159, 200)          320800    \n",
       "_________________________________________________________________\n",
-      "time_distributed_28 (TimeDis (None, 159, 17)           3417      \n",
+      "time_distributed_6 (TimeDist (None, 159, 17)           3417      \n",
       "=================================================================\n",
       "Total params: 15,324,817\n",
       "Trainable params: 324,217\n",
@@ -652,35 +666,35 @@
       "_________________________________________________________________\n",
       "None\n",
       "Epoch 1/10\n",
-      "Accuracy: 0.17363817097415507\n",
-      " - 45s - loss: 19.8921\n",
+      "Accuracy: 0.7654075546719682\n",
+      " - 253s - loss: 18.2768\n",
       "Epoch 2/10\n",
-      "Accuracy: 0.2724850894632207\n",
-      " - 42s - loss: 18.2540\n",
+      "Accuracy: 0.8652882703777336\n",
+      " - 240s - loss: 5.8403\n",
       "Epoch 3/10\n",
-      "Accuracy: 0.264493041749503\n",
-      " - 42s - loss: 17.3125\n",
+      "Accuracy: 0.8924055666003976\n",
+      " - 242s - loss: 3.6612\n",
       "Epoch 4/10\n",
-      "Accuracy: 0.35021868787276345\n",
-      " - 44s - loss: 16.5836\n",
+      "Accuracy: 0.9033001988071571\n",
+      " - 244s - loss: 2.9337\n",
       "Epoch 5/10\n",
-      "Accuracy: 0.4166600397614314\n",
-      " - 43s - loss: 15.7777\n",
+      "Accuracy: 0.910258449304175\n",
+      " - 243s - loss: 2.5724\n",
       "Epoch 6/10\n",
-      "Accuracy: 0.4827435387673956\n",
-      " - 40s - loss: 14.5043\n",
+      "Accuracy: 0.9155864811133201\n",
+      " - 246s - loss: 2.3429\n",
       "Epoch 7/10\n",
-      "Accuracy: 0.5348707753479125\n",
-      " - 45s - loss: 12.9533\n",
+      "Accuracy: 0.9165009940357853\n",
+      " - 269s - loss: 2.1785\n",
       "Epoch 8/10\n",
-      "Accuracy: 0.5933200795228628\n",
-      " - 44s - loss: 11.2748\n",
+      "Accuracy: 0.9180914512922466\n",
+      " - 264s - loss: 2.0448\n",
       "Epoch 9/10\n",
-      "Accuracy: 0.6467594433399603\n",
-      " - 41s - loss: 9.7915\n",
+      "Accuracy: 0.9201988071570577\n",
+      " - 260s - loss: 1.9224\n",
       "Epoch 10/10\n",
-      "Accuracy: 0.6879125248508946\n",
-      " - 43s - loss: 8.5136\n"
+      "Accuracy: 0.9247713717693837\n",
+      " - 273s - loss: 1.8349\n"
      ]
     }
    ],
@@ -697,7 +711,7 @@
     "print(model.summary())\n",
     "\n",
     "# train\n",
-    "hist=model.fit(vectorized_data_padded[:1000],vectorized_labels_padded[:1000], sample_weight=weights[:1000], batch_size=100,verbose=2,epochs=10, callbacks=[EvaluateTags()])"
+    "hist=model.fit(vectorized_data_padded,vectorized_labels_padded, sample_weight=weights, batch_size=100,verbose=2,epochs=10, callbacks=[EvaluateTags()])"
    ]
   },
   {
@@ -709,19 +723,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sentence> This is a test sentence.\n",
-      "This PRON\n",
-      "is AUX\n",
+      "sentence> What a great sentence this is !\n",
+      "What PRON\n",
       "a DET\n",
-      "test NOUN\n",
-      "sentence. PUNCT\n",
+      "great ADJ\n",
+      "sentence NOUN\n",
+      "this PRON\n",
+      "is AUX\n",
+      "! PUNCT\n",
+      "sentence> Another one could be even better , but it has too many words .\n",
+      "Another DET\n",
+      "one NOUN\n",
+      "could AUX\n",
+      "be AUX\n",
+      "even ADV\n",
+      "better ADJ\n",
+      ", PUNCT\n",
+      "but CCONJ\n",
+      "it PRON\n",
+      "has VERB\n",
+      "too ADV\n",
+      "many ADJ\n",
+      "words NOUN\n",
+      ". PUNCT\n",
       "sentence> end\n"
      ]
     }
@@ -748,6 +779,13 @@
     "    for token, tag in zip(tokens, tags):\n",
     "        print(token, tag)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
